# budget-tracker

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml
app/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_category_type_alter_category_logo_and_more.py  0003_user_is_staff_alter_limit_end_date.py  0004_remove_limit_end_date.py  0005_limit_end_date.py  0006_alter_user_telegram_id.py  0007_alter_transaction_description.py  0008_limit_current_amount.py  0009_insert_categories.py  0010_alter_category_logo.py  0011_alter_category_logo.py
app/templates/app/: add_transaction.html  analys.html  auth.html  base.html  create_limit.html  create_target.html  edit_limit.html  edit_target.html  edit_transaction.html  limit.html  main.html  registration.html  target.html  transaction_list.html  transactions.html  welcome.html
bot/: credentials.py  models.py  urls.py  views.py
bot/management/commands/: start_bot.py
bot/migrations/: 0001_initial.py
bot/services/: auth.py  bot.py  diagram.py  excel.py  transaction_info.py
budget-tracker-vue/: README.md  index.html  package-lock.json  package.json
budget-tracker-vue/src/: App.vue  const.js
budget-tracker-vue/src/components/: AirDatepicker.vue  Aside.vue  EditLimit.vue  EditTarget.vue  EditTransaction.vue  Navigation.vue
budget_tracker/: settings.py  urls.py
deploy/: wait-for-it.sh
deploy/frontend/: Dockerfile
deploy/nginx/: Dockerfile  host.conf
deploy/python/: Dockerfile  uwsgi.ini
(+13 files in other folders)
